--- a/styles/layout.css
+++ b/styles/layout.css
@@ -194,10 +194,10 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 	}
 
 #services li{
-	display:block;
+	display:block; border-bottom: 1px solid #fff;
 	float:left;
-	width:294px;
-	height:180px;
+	width:212px;
+	height:190px;
 	margin:0 9px 0 0;
 	padding:10px;
 	color:#666666;
@@ -525,3 +525,8 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 	margin:0;
 	padding:0;
 	}
+.fl_left img {
+    width: 100px;
+}h2 a {
+    color: #2684B7;
+}
